[gd_scene load_steps=4 format=3 uid="uid://btilb0ar6fpjr"]

[ext_resource type="Script" uid="uid://4xkdlqyekjo6" path="res://scripts/UI/building_list_item.gd" id="1_rlh5t"]
[ext_resource type="Texture2D" uid="uid://cc1u2gyx0d17m" path="res://assets/block.png" id="2_whvsx"]
[ext_resource type="Theme" uid="uid://h1f7iqhh7ycb" path="res://themes/kenneyUI-yellow.tres" id="3_dmjrb"]

[node name="ListItem" type="HBoxContainer"]
offset_right = 484.0
offset_bottom = 214.0
size_flags_vertical = 3
theme_override_constants/separation = 10
script = ExtResource("1_rlh5t")

[node name="ItemImage" type="TextureRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_whvsx")
expand_mode = 1
stretch_mode = 5

[node name="ItemInfo" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 10

[node name="ItemName" type="Label" parent="ItemInfo"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 25
text = "Мойка"
autowrap_mode = 2

[node name="ItemDescription" type="Label" parent="ItemInfo"]
custom_minimum_size = Vector2(100, 10)
layout_mode = 2
autowrap_mode = 2

[node name="BuyButton" type="Button" parent="ItemInfo"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_dmjrb")
text = "10G купить"

[connection signal="focus_entered" from="ItemInfo/BuyButton" to="." method="_on_buy_button_focus_entered"]
[connection signal="mouse_entered" from="ItemInfo/BuyButton" to="." method="_on_buy_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemInfo/BuyButton" to="." method="_on_buy_button_mouse_exited"]
[connection signal="pressed" from="ItemInfo/BuyButton" to="." method="_on_buy_button_pressed"]
